build_errors.txt
    Checking kwavers v2.14.0 (D:\kwavers)
warning: unused import: `Zip`
  --> src\boundary\pml.rs:5:38
   |
 5 | use ndarray::{Array3, ArrayViewMut3, Zip};
   |                                      ^^^
   |
note: the lint level is defined here
  --> src\lib.rs:13:5
   |
13 |     unused_imports,
   |     ^^^^^^^^^^^^^^

warning: unused import: `Array1`
 --> src\fft\fft_processor.rs:7:18
  |
7 | use ndarray::{s, Array1, Array2, Array3, ArrayView1, Axis, Zip};
  |                  ^^^^^^

warning: unused import: `Array2`
 --> src\physics\mechanics\acoustic_wave\hybrid_angular_spectrum\diffraction.rs:9:15
  |
9 | use ndarray::{Array2, Array3};
  |               ^^^^^^

warning: unused import: `s`
   --> src\physics\plugin\transducer_field.rs:140:23
    |
140 |         use ndarray::{s, Array2};
    |                       ^

warning: unused import: `Complex64`
 --> src\solver\spectral\utils.rs:7:18
  |
7 | use crate::fft::{Complex64, KSpaceCalculator};
  |                  ^^^^^^^^^

warning: unused imports: `Array4` and `Axis`
 --> src\solver\spectral\utils.rs:9:26
  |
9 | use ndarray::{s, Array3, Array4, Axis, Zip};
  |                          ^^^^^^  ^^^^

warning: unused imports: `ArrayAccess` and `CoreMedium`
 --> src\solver\spectral\solver.rs:9:21
  |
9 | use crate::medium::{ArrayAccess, CoreMedium, Medium};
  |                     ^^^^^^^^^^^  ^^^^^^^^^^

warning: unused import: `num_complex::Complex`
  --> src\source\wavefront\bessel.rs:11:5
   |
11 | use num_complex::Complex;
   |     ^^^^^^^^^^^^^^^^^^^^

warning: use of deprecated method `physics::imaging::elastography::radiation_force::AcousticRadiationForce::apply_push_pulse`: ARFI should be modeled as a body-force source term; use push_pulse_body_force instead.
   --> src\physics\imaging\elastography\radiation_force.rs:318:37
    |
318 |             let displacement = self.apply_push_pulse(push.location)?;
    |                                     ^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

error[E0599]: no method named `apply_bandpass` found for struct `FrequencyFilter` in the current scope
   --> src\solver\time_reversal\reconstruction\mod.rs:141:26
    |
139 |                       signal = self
    |  ______________________________-
140 | |                         .frequency_filter
141 | |                         .apply_bandpass(signal, dt, freq_range)?;
    | |_________________________-^^^^^^^^^^^^^^
    |
   ::: src\signal\filter.rs:18:1
    |
 18 |   pub struct FrequencyFilter {
    |   -------------------------- method `apply_bandpass` not found for this struct
    |
help: there is a method `bandpass` with a similar name, but with different arguments
   --> src\signal\filter.rs:30:5
    |
 30 | /     pub fn bandpass(
 31 | |         &self,
 32 | |         signal: &[f64],
 33 | |         dt: f64,
 34 | |         low_freq: f64,
 35 | |         high_freq: f64,
 36 | |     ) -> KwaversResult<Vec<f64>> {
    | |________________________________^

warning: variable does not need to be mutable
  --> src\physics\mechanics\acoustic_wave\hybrid_angular_spectrum\diffraction.rs:81:13
   |
81 |         let mut field = plane_2d.mapv(|v| Complex64::new(v, 0.0));
   |             ----^^^^^
   |             |
   |             help: remove this `mut`
   |
note: the lint level is defined here
  --> src\lib.rs:14:5
   |
14 |     unused_mut,
   |     ^^^^^^^^^^

warning: variable does not need to be mutable
  --> src\physics\mechanics\acoustic_wave\kzk\parabolic_diffraction.rs:98:13
   |
98 |         let mut complex_field = field.mapv(|x| Complex64::new(x, 0.0));
   |             ----^^^^^^^^^^^^^
   |             |
   |             help: remove this `mut`

warning: unused variable: `dt`
   --> src\signal\filter.rs:119:37
    |
119 |     fn apply(&self, signal: &[f64], dt: f64) -> KwaversResult<Vec<f64>> {
    |                                     ^^ help: if this is intentional, prefix it with an underscore: `_dt`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> src\solver\hybrid\adaptive_selection\metrics.rs:66:13
   |
66 |         let mut fft = ProcessorFft3d::new(nx, ny, nz);
   |             ----^^^
   |             |
   |             help: remove this `mut`

warning: unused variable: `nx`
   --> src\solver\spectral\utils.rs:252:10
    |
252 |     let (nx, ny, nz) = field.dim();
    |          ^^ help: if this is intentional, prefix it with an underscore: `_nx`

warning: unused variable: `ny`
   --> src\solver\spectral\utils.rs:252:14
    |
252 |     let (nx, ny, nz) = field.dim();
    |              ^^ help: if this is intentional, prefix it with an underscore: `_ny`

warning: unused variable: `nz`
   --> src\solver\spectral\utils.rs:252:18
    |
252 |     let (nx, ny, nz) = field.dim();
    |                  ^^ help: if this is intentional, prefix it with an underscore: `_nz`

warning: unused variable: `grid`
  --> src\source\custom\mod.rs:86:63
   |
86 |     fn get_source_term(&self, t: f64, x: f64, y: f64, z: f64, grid: &Grid) -> f64 {
   |                                                               ^^^^ help: if this is intentional, prefix it with an underscore: `_grid`

For more information about this error, try `rustc --explain E0599`.
warning: `kwavers` (lib) generated 17 warnings
error: could not compile `kwavers` (lib) due to 1 previous error; 17 warnings emitted
